tmux: use C-\ as prefix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,8 @@
 set -g mouse off
 
 unbind C-b
-set-option -g prefix C-\
+set-option -g prefix C-\\
+bind C-\\ send-prefix
 
 set -s escape-time 0
 
