--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,9 @@
 set -g mouse off
 
-unbind C-b
-set-option -g prefix C-\\
-bind C-\\ send-prefix
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 set -s escape-time 0
 
