tmux: use C-t as modifier

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,9 @@
 set -g mouse off
 
+set -g prefix C-t
+bind-key C-t send-prefix
+unbind C-b
+
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
