keyd: optimize for vim

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -2,13 +2,10 @@
 *
 
 [main]
-capslock = backspace
-backspace = esc
-esc = oneshot(meta)
-leftalt = oneshot(control)
-rightalt = oneshot(control)
-leftmeta = oneshot(alt)
-compose = oneshot(alt)
-rightcontrol = oneshot(alt)
+esc = leftalt
+capslock = esc
 leftcontrol = capslock
-shift = oneshot(shift)
+leftalt = oneshot(meta)
+compose = rightcontrol
+rightalt = backspace
+delete = compose
