--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -5,7 +5,8 @@
 esc = leftalt
 capslock = esc
 leftcontrol = capslock
-leftalt = oneshot(meta)
+leftmeta = leftcontrol
+leftalt = leftmeta
 compose = rightcontrol
 rightalt = backspace
 delete = compose
